tests/errors/frame_exist_55/e8.src
.IPPcode21

CREATEFRAME
PUSHFRAME
DEFVAR LF@f1
PUSHFRAME
